# python.web-hw14

./: .gitignore  README.md
rest_app/: main.py  pyproject.toml  test.db
rest_app/docs/source/: conf.py  index.rst
rest_app/migrations/versions/: 3986f204a81c_user_added.py  907ae589a9c1_init.py  92cebe832e7c_add_autoincrement.py  be6a82746ee5_minore_update_for_user_add_avatar.py  d63f01de3a2e_minore_update_user.py  ec877b85cb13_add_avatar_to_user.py
rest_app/src/: schemas.py
rest_app/src/conf/: config.py
rest_app/src/database/: db.py  models.py
rest_app/src/repository/: contacts.py  users.py
rest_app/src/routes/: auth.py  contacts.py  users.py
rest_app/src/services/: auth.py  email.py
rest_app/tests/: conftest.py  test_rout_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
